--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" href="/css/style.css">
+	<link rel="stylesheet" href="./css/style.css">
 		<meta charset = "utf-8">
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
 				<title>Emmanuel_Bincom-Test</title> 
@@ -109,11 +109,11 @@ Lagos<br>
 <hr>
 <section>
 	<div class="gallery">
-		<img src="/images/Seaman1.jpg"  alt="SF Emmanuel">
-		<img src="/images/Seaman2.jpg"  alt="SF Emmanuel and friends">
-		<img src="/images/Seaman3.jpg"  alt="SF Emmanuel and friends">
-		<img src="/images/Seaman4.jpg"  alt="SF Emmanuel and friends">
-		<img src="/images/Seaman5.jpg"  alt="SF Emmanuel and friends">
+		<img src="/images/Seaman1.Jpg"  alt="SF Emmanuel">
+		<img src="/images/Seaman2.Jpg"  alt="SF Emmanuel and friends">
+		<img src="/images/Seaman3.Jpg"  alt="SF Emmanuel and friends">
+		<img src="/images/Seaman4.Jpg"  alt="SF Emmanuel and friends">
+		<img src="/images/Seaman5.Jpg"  alt="SF Emmanuel and friends">
 	</div>
 
 </section>
