--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@ Lagos<br>
 <hr>
 <section>
 	<div class="gallery">
-		<img src="/images/Seaman1.JPEG"  alt="SF Emmanuel">
-		<img src="/images/Seaman2.Jpg"  alt="SF Emmanuel and friends">
-		<img src="/images/Seaman3.Jpg"  alt="SF Emmanuel and friends">
+		<img src="/images/Seaman1.JPG"  alt="SF Emmanuel">
+		<img src="/Images/Seaman2.jpg"  alt="SF Emmanuel and friends">
+		<img src="/Images/Seaman3.JPG"  alt="SF Emmanuel and friends">
 		<img src="/images/Seaman4.Jpg"  alt="SF Emmanuel and friends">
 		<img src="/images/Seaman5.Jpg"  alt="SF Emmanuel and friends">
 	</div>
