--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" href="/css/style.css">
+	<link rel="stylesheet" href="./Css/style.css">
 		<meta charset = "utf-8">
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
 				<title>Emmanuel_Bincom-Test</title> 
