--- a/index.html
+++ b/index.html
@@ -109,10 +109,10 @@ Lagos<br>
 <hr>
 <section>
 	<div class="gallery">
-		<img src="../bincom_test/images/Seaman1.jpg"  alt="SF Emmanuel">
+		<img src="./bincom_test/images/Seaman1.jpg"  alt="SF Emmanuel">
 		<img src="bincom_test/Images/Seaman2.jpeg"  alt="SF Emmanuel and friends">
 		<img src="../Images/Seaman3.Jpg"  alt="SF Emmanuel and friends">
-		<img src="/images/Seaman4.Jpg"  alt="SF Emmanuel and friends">
+		<img src="images/Seaman4.Jpg"  alt="SF Emmanuel and friends">
 		<img src="/images/Seaman5.Jpg"  alt="SF Emmanuel and friends">
 	</div>
 
