--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@ Lagos<br>
 <section>
 	<div class="gallery">
 		<img src="./bincom_test/images/Seaman1.jpg"  alt="SF Emmanuel">
-		<img src="bincom_test/Images/Seaman2.jpeg"  alt="SF Emmanuel and friends">
-		<img src="../Images/Seaman3.Jpg"  alt="SF Emmanuel and friends">
-		<img src="images/Seaman4.Jpg"  alt="SF Emmanuel and friends">
-		<img src="/images/Seaman5.Jpg"  alt="SF Emmanuel and friends">
+		<img src="./bincom_test/images/Seaman2.jpg"  alt="SF Emmanuel and friends">
+		<img src="./bincom_test/images/Seaman3.jpg"  alt="SF Emmanuel and friends">
+		<img src="./bincom_test/images/Seaman4.jpg"  alt="SF Emmanuel and friends">
+		<img src="./bincom_test/images/Seaman5.jpg"  alt="SF Emmanuel and friends">
 	</div>
 
 </section>
