--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@ Lagos<br>
 <hr>
 <section>
 	<div class="gallery">
-		<img src="./bincom_test/images/Seaman1.jpg"  alt="SF Emmanuel">
-		<img src="./bincom_test/images/Seaman2.jpg"  alt="SF Emmanuel and friends">
+		<img src="/bincom_test/images/Seaman1.jpg"  alt="SF Emmanuel">
+		<img src="bincom_test/images/Seaman2.jpg"  alt="SF Emmanuel and friends">
 		<img src="./bincom_test/images/Seaman3.jpg"  alt="SF Emmanuel and friends">
 		<img src="./bincom_test/images/Seaman4.jpg"  alt="SF Emmanuel and friends">
 		<img src="./bincom_test/images/Seaman5.jpg"  alt="SF Emmanuel and friends">
